--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         <!-- ===== 画面0: ホーム画面 ===== -->
         <div id="home-screen" class="screen p-6 sm:p-8">
              <header class="text-center mb-8 relative">
-                <div class="mx-auto mb-6 h-28 w-28 bg-gray-200 rounded-lg flex items-center justify-center">
-                    <span class="text-gray-400 text-sm">ロゴ</span>
-                </div>
+               <img src="logo.png" alt="割り勘ソムリエ ロゴ" class="mx-auto mb-6 h-28 w-28 rounded-lg">
                 <h1 class="text-3xl font-bold text-gray-900">割り勘ソムリエ</h1>
                 <p class="text-gray-500 mt-2">スマート割り勘アプリ</p>
                 <p class="text-sm text-gray-400 mt-2">はしご酒の複雑な割り勘を、誰でも簡単・正確に。</p>
